--- a/src/main/resources/ru/nucodelabs/gem/view/charts/MisfitStacks.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/charts/MisfitStacks.fxml
@@ -19,8 +19,8 @@
         <Label styleClass="chart-label" text="Погрешность подбора модели" VBox.vgrow="NEVER"/>
         <HBox HBox.hgrow="ALWAYS"/>
         <Label fx:id="targetFunctionText" styleClass="chart-label" text="-" VBox.vgrow="NEVER"/>
-        <Label fx:id="deviationText" styleClass="chart-label" text="-" VBox.vgrow="NEVER"/>
-        <Label fx:id="inaccuracyText" styleClass="chart-label" text="-" VBox.vgrow="NEVER"/>
+        <Label fx:id="misfitText" styleClass="chart-label" text="-" VBox.vgrow="NEVER"/>
+        <Label fx:id="errorText" styleClass="chart-label" text="-" VBox.vgrow="NEVER"/>
     </HBox>
     <LineChart fx:id="lineChart" VBox.vgrow="ALWAYS" maxHeight="Infinity" maxWidth="Infinity"
                minHeight="0" minWidth="0" animated="false" styleClass="padded-chart" legendVisible="false">
