--- a/src/main/resources/ru/nucodelabs/gem/view/controller/tables/ModelTable.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/controller/tables/ModelTable.fxml
@@ -45,7 +45,8 @@
                     </fx:script>
                     <Button text="?" onAction="showHelp()"/>
                 </HBox>
-                <Button text="Первичная модель" onAction="#makePrimaryModel"/>
+                <Button text="Трехслойная первичная модель" onAction="#simpleInitialModel"/>
+                <Button text="Произвольная первичная модель" onAction="#multiLayerInitialModel"/>
                 <HBox alignment="BASELINE_CENTER" VBox.vgrow="NEVER">
                     <VBox alignment="BASELINE_CENTER">
                         <Button text="%import" onAction="#importMOD"/>
