--- a/src/main/resources/ru/nucodelabs/gem/view/controller/tables/ModelTable.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/controller/tables/ModelTable.fxml
@@ -67,9 +67,11 @@
                     <Button text="?" onAction="showHelp()"/>
                 </HBox>
                 <Button text="Трехслойная первичная модель" onAction="#simpleInitialModel"/>
-                <HBox alignment="BASELINE_CENTER" spacing="5">
-                    <Button text="Произвольная первичная модель" onAction="#multiLayerInitialModel"/>
-                    <Button text="Параметры" onAction="showInitialModelConfiguration()"/>
+                <HBox alignment="BASELINE_CENTER">
+                    <Button text="Произвольная первичная модель" onAction="#multiLayerInitialModel"
+                            style="-fx-border-radius: 5 0 0 5;"/>
+                    <Button text="Параметры" onAction="showInitialModelConfiguration()"
+                            style="-fx-border-radius: 0 5 5 0;"/>
                 </HBox>
                 <HBox alignment="BASELINE_CENTER" VBox.vgrow="NEVER">
                     <VBox alignment="BASELINE_CENTER">
